--- a/dexterz-sol/package.json
+++ b/dexterz-sol/package.json
@@ -8,6 +8,8 @@
     "@mui/icons-material": "^6.1.9",
     "@mui/material": "^6.1.9",
     "@mui/styled-engine-sc": "^6.1.9",
+    "@sanity/client": "^6.22.5",
+    "@sanity/image-url": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@sanity/eslint-config-studio": "^4.0.0",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15"
