--- a/dexterz-sol/package.json
+++ b/dexterz-sol/package.json
@@ -24,7 +24,9 @@
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.13",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "rxjs":"^7.8.1",
+    "observable-hook":"^0.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
